// Copyright 2022 labring. All rights reserved.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package manager;

service Manager {
    rpc SendHeart(HeartRequest) returns (HeartResponse) {}
    rpc GetMetadata(MetadataRequest) returns (MetadataResponse) {}
}

//heart request
message HeartRequest {
    string address = 1;
    uint32 flag = 2;
    string lifetime = 3;
}

//heart response
message HeartResponse {
    uint32 status = 1;
}

//server metadata request
message MetadataRequest {
    uint32 flag = 1;
}

//server metadata response
message MetadataResponse {
    repeated string instances = 1;
}